# aoc2024

./: .gitignore  init.py  pyproject.toml
aoc/day01/: .start  run.py
aoc/day02/: .start  run.py
aoc/day03/: .start  run.py
aoc/day04/: .start  run.py
aoc/day05/: .start  run.py
aoc/day06/: .start  run.py
aoc/day07/: .start  run.py
aoc/day08/: .start  run.py
aoc/day09/: .start  run.py
aoc/day10/: .start  run.py
aoc/day11/: .start  run.py
aoc/day13/: .start  run.py
aoc/day14/: .start  run.py
aoc/day15/: .start  run.py  run_part2.py
aoc/day18/: .start  run.py
aoc/day19/: .start  run.py
aoc/day20/: .start  run.py
aoc/day22/: .start  run.py
aoc/day23/: .start  run.py
