[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
pendulum = "^2.1.2"
numpy = "^1.26.2"
scikit-image = "^0.22.0"
print-color = "^0.4.6"
xxhash = "^3.4.1"
matplotlib = "^3.8.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
